src/snapshots/rlox__test_runtime__inequality.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"print 1 != 1; print 0 != 1;\")"
---
stdout:
false
true


stderr:


