src/snapshots/rlox__test_runtime__lots_of_negs.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"print ---------------------------------------------------------------------------------------------------------1;\")"
---
stdout:
-1


stderr:


