src/snapshots/rlox__test_runtime__missing_global.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"var bar; print foo;\")"
---
stdout:


stderr:
Error: Undefined variable: foo
   ╭─[<unknown>:1:13]
   │
 1 │ var bar; print foo;
   │                ───  
   │                      
───╯


