src/snapshots/rlox__test_runtime__multi_local_assign.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        {\n            var a;\n            var b;\n            a = b = a = 1;\n            print a;\n            print b;\n        }\n        \")"
---
stdout:
1
1


stderr:


