src/snapshots/rlox__test_runtime__negate_bool.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"print -true;\")"
---
stdout:


stderr:
Error: Tried to negate a boolean (true)
   ╭─[<unknown>:1:13]
   │
 1 │ print -true;
   │       ─  
   │           
───╯


