src/snapshots/rlox__test_runtime__nested_assign.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        var a;\n        var b = a = 1;\n        print a;\n        print b;\n        \")"
---
stdout:
1
1


stderr:


