src/snapshots/rlox__test_runtime__nested_for_loops.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        for var a = 0; a < 3; a = a + 1 {\n            for var b = 1; b < 3; b = b * 2 {\n                print b;\n            }\n        }\n        \")"
---
stdout:
1
2
1
2
1
2


stderr:


