src/snapshots/rlox__test_runtime__nested_function.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        fun foo() {\n            fun bar() {\n                print 1;\n            }\n            bar();\n        }\n        foo();\n        \")"
---
stdout:
1


stderr:


