src/snapshots/rlox__test_runtime__nested_if.snap
---
source: src/main.rs
expression: "crate::common::util::mock_interpret(\"\n        if true {\n            if true {\n                if true {\n                    print 1;\n                }\n                print 2;\n            }\n            print 3;\n        }\n        print 4;\n        \")"
---
stdout:
1
2
3
4


stderr:


